--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^5.1.3",
     "bootstrap-dark-5": "^1.1.3",
     "express-validator": "^6.14.0",
+    "merge-stream": "^2.0.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.3.1",
